--- a/list.html
+++ b/list.html
@@ -1,84 +1,130 @@
 <!DOCTYPE HTML>  
-<html>  
-    <header>
-        <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="table_style.css">
-        <title>My Webpage Title</title>
-    </header>
-    <body>  
-        <!---Navigation--->
-        <!--This section of code defines the navigation bar at the top of the page.  The classes used here are defined in the style.css file.-->
-        <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
-            <div class="container">
-                <!--This code defines the "My Webpage" link in the top right corner of the navigation pane-->
-                <a class="navbar-brand" href="">My Webpage</a>
-                <!--This code defines the "List" link in the top left corner of the navigation pane-->
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="./list.html">List</a></li>
-                </ul>
-            </div>
-        </nav>
-        <!--This code creates the middle section of the webpage-->
-        <header class="masthead bg-primary text-white text-center">
-            <h1>My Movies</h1>
-        </header>
-        <!--Here is where the table will be loaded in.  The actual table will be loaded in JavaScript.-->
-        <section class="mt-5 text-center">
-            <div id="showDataJSON"></div>
-        </section>
-    </body>
-
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Andy Vo — INFO 202</title>
+    <meta name="description" content="Andy Vo is a Software Engineering Intern at Red Hat and a Master's of Information Management and Systems Candidate at University of California, Berkeley who is passionate about designing experiences that bring users together through storytelling.">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-199547569-1"></script>
     <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-199547569-1');
+    </script>
+    <!-- facebook tags -->
+    <meta property="og:title" content="Andy Vo">
+    <meta property="og:description" content="Andy Vo is a Software Engineering Intern at Red Hat and a Master's of Information Management and Systems Candidate at University of California, Berkeley who is passionate about designing experiences that bring users together through storytelling.">
+    <meta property="og:url" content="https://andyvo.com/">
+    <meta property="og:type" content="website">
+    <!-- twitter tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:title" content="Andy Vo">
+    <meta property="twitter:description" content="Andy Vo is a Software Engineering Intern at Red Hat and a Master's of Information Management and Systems Candidate at University of California, Berkeley who is passionate about designing experiences that bring users together through storytelling.">
+    <!-- for mobile themes i think -->
+    <meta name="theme-color" content="#2A2A2A">
+
+    <!-- main css -->
+    <link rel="stylesheet" href="styles.css">
+    <!-- inter font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap" rel="stylesheet"> 
+    <!-- favicon stuffs -->
+    <link rel="shortcut icon" type="image/x-icon" href="/images/andyvo_new_logo_alt.png">
+    <link rel="apple-touch-icon" type="image/png" href="/images/andyvo_new_logo_alt.png">
+    <link rel="mask-icon" type="image/png" href="/images/andyvo_new_logo_alt.png">
+
+    <!-- aos -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="style.css"> -->
+    <link rel="stylesheet" href="table_style.css">
+  </head>
+  <body>  
+    <!---AVO navigation--->
+    <nav class="navigate">
+      <div class="navigate-container">
+        <div class="navigate-1">
+          <a href="/">
+            <img src="/images/full_logo_dark.svg" alt="Andy Vo logo">
+          </a>
+        </div>
+        <div class="navigate-2">
+          <a class="text-navy" href="/index.html#about-me">About Me</a>
+          <a class="text-navy" href="/list.html"><button class="button-navigate">List Data</button></a>
+        </div>
+      </div>
+    </nav>
+    <header class="section-80" id="hero">
+      <div class="section-container">
+        <h1 class="text-h1 text-caps text-navy">My Top Spotify Songs</h1>
+        <h3 class="text-h3 text-navy">This is a compilation of all my top Spotify songs from the last month. The JSON data was pulled from the Spotify API and manually inputted from Postman for the sake of this assignment. This has been quite a month for me in terms of music. Usually, it's full of Bad Suns, The Band CAMINO, Hippo Campus, and Valley. But now, it seems like there's a lot of NIKI. I'm excited to see what my Spotify Wrapped is going to look like.</h3>
+      </div>
+    </header>
+    <section class="section-80">
+      <div class="section-table">
+        <div id="showDataJSON"></div>
+      </div>
+    </section>
+    <footer>
+      <p>© 2022 Andy Vo</p>
+    </footer>
+  </body>
+
+  <script>
+    /*
+    * RENDERING THE JSON TABLE
+    * Get JSON data from file
+    * Get headers from retrieved data
+    * Set headers for table
+    * Add data to table
+    * Add table to DOM
+    */
+    fetch('./list_data.json')
+      .then(response => response.json())
+      .then(data => {
 
         /*
-        * RENDERING THE JSON TABLE
-        * Get JSON data from file
-        * Get headers from retrieved data
-        * Set headers for table
-        * Add data to table
-        * Add table to DOM
+        This section creates the base table and finds the root json node.
         */
-        fetch('./list_data.json')
-            .then(response => response.json())
-            .then(data => {
+        var jsonTable = document.createElement("table");
+        var tr = jsonTable.insertRow(-1);   
+        jsonTable.style.width = "75%";
+        let root;
+        for (let prop in data) {
+          root = prop;
+        }
 
-                /*
-                This section creates the base table and finds the root json node.
-                */
-                var jsonTable = document.createElement("table");
-                var tr = jsonTable.insertRow(-1);   
-                jsonTable.style.width = "75%";
-                let root;
-                for (let prop in data) {
-                    root = prop;
-                }
-
-                /*
-                This section selects the headers for the table
-                */
-                let headers = Object.keys(data[root][0]);
-                headers.forEach(header => {
-                    var th = document.createElement("th");      
-                    th.innerHTML = header;
-                    tr.appendChild(th);
-                })              
-                /*
-                This section adds the data into each row of the list
-                */
-                let items = Object.keys(data[root]);
-                items.forEach(item => {
-                    tr = jsonTable.insertRow(-1);
-                    for (let key in data[root][item]) {
-                       var tabCell = tr.insertCell(-1);
-                       tabCell.innerHTML = data[root][item][key];
-                    }
-                })
-                /*
-                This section adds the table to the HTML
-                */
-                var divContainer = document.getElementById("showDataJSON");
-                divContainer.innerHTML = "";
-                divContainer.appendChild(jsonTable);
-            });
-    </script>  
+        /*
+        This section selects the headers for the table
+        */
+        let headers = Object.keys(data[root][0]);
+        headers.forEach(header => {
+          var th = document.createElement("th");      
+          th.innerHTML = header;
+          tr.appendChild(th);
+        })              
+        /*
+        This section adds the data into each row of the list
+        */
+        let items = Object.keys(data[root]);
+        items.forEach(item => {
+          tr = jsonTable.insertRow(-1);
+          for (let key in data[root][item]) {
+            var tabCell = tr.insertCell(-1);
+            tabCell.innerHTML = data[root][item][key];
+          }
+        })
+        
+        /*
+        This section adds the table to the HTML
+        */
+        var divContainer = document.getElementById("showDataJSON");
+        divContainer.innerHTML = "";
+        divContainer.appendChild(jsonTable);
+      });
+  </script>  
 </html>
