feat(website): favicon and cleanup head

--- a/index.html
+++ b/index.html
@@ -29,19 +29,14 @@
 
     <!-- main css -->
     <link rel="stylesheet" href="styles.css">
-    <!-- inter font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap" rel="stylesheet"> 
+
     <!-- favicon stuffs -->
-    <link rel="shortcut icon" type="image/x-icon" href="/images/andyvo_new_logo_alt.png">
+    <link rel="icon" type="image/x-icon" href="/images/andyvo_new_logo_alt.png">
     <link rel="apple-touch-icon" type="image/png" href="/images/andyvo_new_logo_alt.png">
     <link rel="mask-icon" type="image/png" href="/images/andyvo_new_logo_alt.png">
 
     <!-- aos -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <!-- <link rel="stylesheet" href="style.css"> -->
-    <link rel="stylesheet" href="table_style.css">
   </head>
   <body>  
     <!---AVO navigation--->
