bug(website): images not loading

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <link rel="stylesheet" href="styles.css">
 
     <!-- favicon stuffs -->
-    <link rel="icon" type="image/x-icon" href="/images/andyvo_new_logo_alt.png">
-    <link rel="apple-touch-icon" type="image/png" href="/images/andyvo_new_logo_alt.png">
-    <link rel="mask-icon" type="image/png" href="/images/andyvo_new_logo_alt.png">
+    <link rel="icon" type="image/x-icon" href="/info202/images/andyvo_new_logo_alt.png">
+    <link rel="apple-touch-icon" type="image/png" href="/info202/images/andyvo_new_logo_alt.png">
+    <link rel="mask-icon" type="image/png" href="/info202/images/andyvo_new_logo_alt.png">
 
     <!-- aos -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -43,13 +43,13 @@
     <nav class="navigate">
       <div class="navigate-container">
         <div class="navigate-1">
-          <a href="/">
-            <img src="/images/full_logo_dark.svg" alt="Andy Vo logo">
+          <a href="/info202/">
+            <img src="/info202/images/full_logo_dark.svg" alt="Andy Vo logo">
           </a>
         </div>
         <div class="navigate-2">
-          <a class="text-navy" href="#about-me">About Me</a>
-          <a class="text-navy" href="/list.html"><button class="button-navigate">List Data</button></a>
+          <a class="text-navy" href="/info202/#about-me">About Me</a>
+          <a class="text-navy" href="/info202/list.html"><button class="button-navigate">List Data</button></a>
         </div>
       </div>
     </nav>
@@ -60,10 +60,10 @@
           <div class="section-left section-text content-3">
             <h1 class="text-h1 text-caps text-navy">Andy Vo</h1>
             <h3 class="text-h3 text-navy">A front-end software engineer bringing experiences to life through accessible design and storytelling.</h3>
-            <a href="/list.html"><button class="button-main">My Spotify List</button></a>
+            <a href="/info202/list.html"><button class="button-main">My Spotify List</button></a>
           </div>
           <div class="section-right section-img">
-            <video src="/images/avo-doing-stuff.mp4" type="video/mp4" autoplay loop muted preload></video>
+            <video src="/info202/images/avo-doing-stuff.mp4" type="video/mp4" autoplay loop muted preload></video>
           </div>
         </div>
       </div>
@@ -73,7 +73,7 @@
       <div class="section-container">
         <div class="section-content two-col-content">
           <div class="section-left section-img">
-            <img src="/images/andyvo-pic.JPG" alt="Andy Vo in San Francisco">
+            <img src="/info202/images/andyvo-pic.JPG" alt="Andy Vo in San Francisco">
           </div>
           <div class="section-right section-text content-3">
             <h2 class="text-h2 text-caps text-navy">Hello there!</h2>
