--- a/list.html
+++ b/list.html
@@ -32,9 +32,9 @@
     <link rel="stylesheet" href="table_style.css">
 
     <!-- favicon stuffs -->
-    <link rel="icon" type="image/x-icon" href="/images/andyvo_new_logo_alt.png">
-    <link rel="apple-touch-icon" type="image/png" href="/images/andyvo_new_logo_alt.png">
-    <link rel="mask-icon" type="image/png" href="/images/andyvo_new_logo_alt.png">
+    <link rel="icon" type="image/x-icon" href="/info202/images/andyvo_new_logo_alt.png">
+    <link rel="apple-touch-icon" type="image/png" href="/info202/images/andyvo_new_logo_alt.png">
+    <link rel="mask-icon" type="image/png" href="/info202/images/andyvo_new_logo_alt.png">
 
     <!-- aos -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -44,13 +44,13 @@
     <nav class="navigate">
       <div class="navigate-container">
         <div class="navigate-1">
-          <a href="/">
-            <img src="/images/full_logo_dark.svg" alt="Andy Vo logo">
+          <a href="/info202/">
+            <img src="/info202/images/full_logo_dark.svg" alt="Andy Vo logo">
           </a>
         </div>
         <div class="navigate-2">
-          <a class="text-navy" href="/index.html#about-me">About Me</a>
-          <a class="text-navy" href="/list.html"><button class="button-navigate">List Data</button></a>
+          <a class="text-navy" href="/info202#about-me">About Me</a>
+          <a class="text-navy" href="/info202/list.html"><button class="button-navigate">List Data</button></a>
         </div>
       </div>
     </nav>
